--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -89,3 +89,17 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+ul.fancytree-container {
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+span.fancytree-focused span.fancytree-title {
+    outline: none;
+}
